--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,7 +7,7 @@
   "margin-bottom": 5,
   "margin-left": 200,
   "margin-right": 200,
-  "modules-left": ["niri/workspaces"],
+  "modules-left": ["niri/workspaces","niri/window"],
   "modules-center": ["clock"],
   "modules-right": [ "tray","backlight", "pulseaudio", "battery"],
   "pulseaudio": {
@@ -18,6 +18,9 @@
   },
   "niri/workspaces": {
     "format": "{index}"
+  },
+  "niri/window": {
+    "format": "{title}"
   },
   "clock": {
     "format": "{:%I:%M %p} 🌸",
