--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -11,7 +11,8 @@
   "modules-center": ["clock"],
   "modules-right": [ "tray","backlight", "pulseaudio", "battery"],
   "pulseaudio": {
-    "format": "{volume}% 🎵"
+    "format": "{volume}% 🎵",
+    "on-click": "pavucontrol"
   },
   "backlight": {
     "format": "{percent}% ☀️",
