--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -11,11 +11,11 @@
   "modules-center": ["clock"],
   "modules-right": [ "tray","backlight", "pulseaudio", "battery"],
   "pulseaudio": {
-    "format": "{volume}% 🎵",
+    "format": "{volume}% 󰝚",
     "on-click": "pavucontrol"
   },
   "backlight": {
-    "format": "{percent}% ☀️",
+    "format": "{percent}% 󰌵",
   },
   "niri/workspaces": {
     "format": "{index}"
@@ -24,7 +24,7 @@
     "format": "{title}"
   },
   "clock": {
-    "format": "{:%I:%M %p} 🌸",
+    "format": "{:%I:%M %p}",
     "interval": 1,
     "tooltip-format": "{:%A %d %B %Y}"
   },
@@ -32,8 +32,8 @@
     "spacing": 12
   },
   "battery": {
-    "format": "{capacity}% 🔋",
-    "format-charging": "{capacity}% 🔌",
+    "format": "{capacity}% 󱊣",
+    "format-charging": "{capacity}% 󰂄",
     "interval": 1,
     "on-click": "/home/keke/.config/rofi/power.sh"
   }
